<resources>
    <string name="app_name">在线英语角</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="exist_phone_no">用户已存在，请登录</string>
    <string name="user_doesnt_exist">用户不存在，请先注册</string>
    <string name="invalid_phone_number">请输入11位有效的手机号</string>
    <string name="invalid_validation_code">请输入6位有效的验证码</string>
    <string name="please_retrieve_validation_code">请先获取验证码</string>
    <string name="validation_code_not_match">验证码错误，请查收验证码，或者重新发送</string>
    <string name="wrong_phone_no">请输入有效的手机号</string>
    <string name="incorrect_password">密码错误，请重新输入</string>
    <string name="server_error">服务器出错，请重试</string>
    <string name="small_pass">密码长度不能少于5个字符</string>
    <string name="wrong_username">请输入有效的用户名</string>
    <string name="wrong_email">请输入有效的邮箱地址</string>
    <string name="username_exist">用户名已存在</string>
    <string name="phone_no_exist">手机号已被占用</string>
    <string name="empty_password">密码不能为空</string>
    <string name="wrong_old_password">旧密码错误，请重新输入</string>
    <string name="new_password_invalid">密码至少由6位字符组成</string>
    <string name="new_passwords_not_match">新密码不一致</string>
    <string name="bad_network_connection">网络错误，请重试</string>
    <string name="register_me">注册</string>
    <string name="already_registered_sign_in">登陆</string>
    <string name="Class">Class</string>
    <string name="contact">手机号</string>
    <string name="email">邮箱</string>
    <string name="name">用户名</string>
    <string name="password">密码</string>
    <string name="register">注册</string>
    <string name="nearby_title">附近人</string>
    <string name="message_title">消息</string>
    <string name="me_title">我的</string>
    <string name="action_settings">Filter</string>
    <string name="filter_menu_female">女性</string>
    <string name="filter_menu_male">男性</string>
</resources>
